# chatbot-samples

./: .gitignore  README.md  SETUP.md
01_Basic/: README.md
01_Basic/backend/: README.md  chat_server.py  requirements.txt
01_Basic/frontend/: README.md  frontend_app.py
02_History/: README.md
02_History/backend/: README.md  chat_server.py
02_History/frontend/: README.md  frontend_app.py
03_RAG/: README.md
03_RAG/backend/: chat_server.py
04_Streaming/: README.md
04_Streaming/backend/: chat_server.py  create_vectorstore.py
04_Streaming/frontend/: frontend_app.py  requirements.txt
05_Auth/: README.md
05_Auth/backend/: chat_server.py  pyproject.toml
05_Auth/frontend/: README.md  frontend_app.py  pyproject.toml
