[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gohei Kusumi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
langchain-chroma = "^0.1.2"
langchain-community = "^0.2.11"
langchain-pinecone = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
